created output labeling and fixed the  gemin assyn issue

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,13 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@google/genai": "^1.33.0",
     "@google/generative-ai": "^0.24.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "genai": "^0.0.18",
     "googleapis": "^165.0.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0"
